--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ufc-upcoming",
   "version": "1.0.0",
   "description": "",
-  "main": "./lib/index.js",
+  "main": "./lib",
   "directories": {
     "lib": "lib"
   },
